--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 			</li>
 		</ul>
 	</section>
+	<!--Услуги-->
 	<section class="section">
 		<h2 class="section-title">Чем мы занимаемся</h2>
 		<ul class="list">
