--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 		.accent{
 			color: #2196F3;
 		}
+		.letter{
+			color: #FFFFFF;
+		}
 	</style>
 </head>
 <body>
@@ -24,7 +27,7 @@
         </nav>
 
 		<ul class="info list">
-			<li><a href=""class="link current">info@devstudio.com</a></li>
+			<li><a href="">info@devstudio.com</a></li>
 			<li><a href="">+38 096 111 11 11</a></li>
 		</ul>
 	</header>
@@ -102,7 +105,7 @@
 	</section>
 	</main>
 	<footer>
-		<a href="./index.html" class="logo"><span class="accent">Web</span>Studio</a>
+		<a href="./index.html" class="logo"><span class="accent">Web</span><span class="letter">Studio</span></a>
 			<address class="address">
 				<p>г. Киев, пр-т Леси Украинки, 26</p>
 				<ul class="infolink list">
