--- a/portfolio.html
+++ b/portfolio.html
@@ -90,7 +90,7 @@
 
     </main>
     <footer>
-		<a href="./index.html" class="logo"><span class="accent">Web</span>Studio</a>
+		<a href="./index.html" class="logo"><span class="accent">Web</span><span class="letter">Studio</span></a>
 			<address class="address">
 				<p>г. Киев, пр-т Леси Украинки, 26</p>
 				<ul class="infolink list">
