--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         </nav>
 
 		<ul class="info list">
-			<li><a href="">info@devstudio.com</a></li>
-			<li><a href="">+38 096 111 11 11</a></li>
+			<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+			<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
 		</ul>
 	</header>
 	<main>
@@ -36,13 +36,13 @@
 		<section class="hero"> 
 			<h1 class="hero-title">Эффективные решения <br /> 
 				для вашего бизнеса</h1>
-			<button class="button">Заказать услугу</button>
+			<button type="button" class="button">Заказать услугу</button>
 		
 		</section>
 	
 	<!-- Преимущества компании--> 
 	<section class="section">
-
+        <h2 hidden>Преимущества</h2>
 		<ul class="feature-list list">
 			<li>
 				<h3 class="title">Внимание к деталям</h3>
@@ -67,13 +67,13 @@
 		<h2 class="section-title">Чем мы занимаемся</h2>
 		<ul class="list">
 			<li>
-				<img src="./img/img.jpg" alt="Картинка с изображением клавиатуры" width="370">
+				<img src="./img/img.jpg" alt="картинка с изображением клавиатуры" width="370" height="294">
 			</li>
 			<li>
-				<img src="./img/img (1).jpg" alt="Картинка с изображением компьютера и телефона" width="370">
+				<img src="./img/img1.jpg" alt="картинка с изображением компьютера и телефона" width="370" height="294">
 			</li>
 			<li>
-				<img src="./img/img (2).jpg" alt="Картинка с изображением планшета" width="370">
+				<img src="./img/img2.jpg" alt="картинка с изображением планшета" width="370" height="294">
 			</li>
 		</ul>
 	</section>
@@ -82,22 +82,22 @@
 		<h2 class="section-title">Наша команда</h2>
 		<ul class="team list">
 			<li>
-				<img src="./img/Демьяненко.jpg" alt="Картинка с изображением парня" width="270">
+				<img src="./img/демьяненко.jpg" alt="картинка с изображением парня" width="270" height="260">
 				<h3 class="title">Игорь Демьяненко</h3>
 				<p class="text" lang="en">Product Designer</p>
 			</li>
 			<li>
-				<img src="./img/Репина.jpg" alt="Картинка с изображением девушки" width="270">
+				<img src="./img/репина.jpg" alt="картинка с изображением девушки" width="270" height="260">
 				<h3 class="title">Ольга Репина</h3>
 				<p class="text" lang="en">Frontend Developer</p>
 			</li>
 			<li>
-				<img src="./img/Тарасов.jpg" alt="Картинка с изображением парня" width="270">
+				<img src="./img/тарасов.jpg" alt="картинка с изображением парня" width="270" height="260">
 				<h3 class="title">Николай Тарасов</h3>
 				<p class="text" lang="en">Marketing</p>
 			</li>
 			<li>
-				<img src="./img/Ермаков.jpg" alt="Картинка с изображением парня" width="270">
+				<img src="./img/ермаков.jpg" alt="картинка с изображением парня" width="270" height="260">
 				<h3 class="title">Михаил Ермаков</h3>
 				<p class="text" lang="en">UI Designer</p>
 			</li>
@@ -107,10 +107,10 @@
 	<footer>
 		<a href="./index.html" class="logo"><span class="accent">Web</span><span class="letter">Studio</span></a>
 			<address class="address">
-				<p>г. Киев, пр-т Леси Украинки, 26</p>
+				<a href="https://www.google.com/maps/d/embed?mid=10uSM3H-mIU3GznYo2szRIEphczw" target="_blank"">г. Киев, пр-т Леси Украинки, 26</a>
 				<ul class="infolink list">
-					<li><a href="">info@devstudio.com</a></li>
-					<li><a href="">+38 096 111 11 11</a></li>
+					<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+					<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
 			    </ul>		
 			</address>
 	</footer>
