--- a/portfolio.html
+++ b/portfolio.html
@@ -28,8 +28,8 @@
         </nav>
 
 		<ul class="info list">
-			<li><a href="">info@devstudio.com</a></li>
-			<li><a href="">+38 096 111 11 11</a></li>
+			<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+			<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
@@ -44,48 +44,48 @@
              <!--Примеры работ-->
             <ul class="examples list">  
                 <li>
-                    <img src="./img/img (0).jpg" alt="Ноутбук" width="370" height="294">
+                    <img src="./img/img0.jpg" alt="ноутбук" width="370" height="294">
                     <h2 class="title">Технокряк</h2>
                     <p class="text">Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="./img/img (9).jpg" alt="Баскетболисты" width="370" height="294">
-                    <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                    <img src="./img/img9.jpg" alt="баскетболисты" width="370" height="294">
+                    <h2 class="title">Постер <span lang="en">Orlean vs Golden Star</span> </h2>
                     <p class="text">Дизайн</p>
                 </li>
                 <li>
-                    <img src="./img/img (11).jpg" alt="Морепродукты" width="370" height="294">
-                    <h2 class="title">Ресторан Seafood</h2>
+                    <img src="./img/img11.jpg" alt="морепродукты" width="370" height="294">
+                    <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
                     <p class="text">Приложение</p>
                 </li>
                 <li>
-                    <img src="./img/img (3).jpg" alt="Наушники" width="370" height="294">
-                    <h2 class="title">Проект Prime</h2>
+                    <img src="./img/img3.jpg" alt="наушники" width="370" height="294">
+                    <h2 class="title">Проект <span lang="en">Prime</span></h2>
                     <p class="text">Маркетинг</p>
                 </li>
                 <li>
-                    <img src="./img/img (4).jpg" alt="Коробки" width="370" height="294">
-                    <h2 class="title">Проект Boxes</h2>
+                    <img src="./img/img4.jpg" alt="коробки" width="370" height="294">
+                    <h2 class="title">Проект <span lang="en">Boxes</span></h2>
                     <p class="text">Приложение</p>
                 </li>
                 <li>
-                    <img src="./img/img (5).jpg" alt="Монитор" width="370" height="294">
-                    <h2 class="title">Inspiration has no Borders</h2>
+                    <img src="./img/img5.jpg" alt="монитор" width="370" height="294">
+                    <h2 class="title" lang="en">Inspiration has no Borders</h2>
                     <p class="text">Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="./img/img (6).jpg" alt="Журнал" width="370" height="294">
-                    <h2 class="title">Издание Limited Edition</h2>
+                    <img src="./img/img6.jpg" alt="журнал" width="370" height="294">
+                    <h2 class="title">Издание <span lang="en">Limited Edition</span></h2>
                     <p class="text">Дизайн</p>
                 </li>
                 <li>
-                    <img src="./img/img (7).jpg" alt="Бирка" width="370" height="294">
-                    <h2 class="title">Проект LAB</h2>
+                    <img src="./img/img7.jpg" alt="бирка" width="370" height="294">
+                    <h2 class="title">Проект<span lang="en">LAB</span></h2>
                     <p class="text">Маркетинг</p>
                 </li>
                 <li>
-                    <img src="./img/img (8).jpg" alt="Ноутбук" width="370" height="294">
-                    <h2 class="title">Growing Business</h2>
+                    <img src="./img/img8.jpg" alt="ноутбук" width="370" height="294">
+                    <h2 class="title" lang="en">Growing Business</h2>
                     <p class="text">Приложение</p>
                 </li>
             </ul>
@@ -97,8 +97,8 @@
 			<address class="address">
 				<p>г. Киев, пр-т Леси Украинки, 26</p>
 				<ul class="infolink list">
-					<li><a href="">info@devstudio.com</a></li>
-					<li><a href="">+38 096 111 11 11</a></li>
+					<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+					<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
 			    </ul>		
 			</address>
 	</footer>
