--- a/portfolio.html
+++ b/portfolio.html
@@ -95,7 +95,7 @@
     <footer>
 		<a href="./index.html" class="logo"><span class="accent">Web</span><span class="letter">Studio</span></a>
 			<address class="address">
-				<p>г. Киев, пр-т Леси Украинки, 26</p>
+				<a href="https://www.google.com/maps/d/embed?mid=10uSM3H-mIU3GznYo2szRIEphczw" target="_blank"">г. Киев, пр-т Леси Украинки, 26</a>
 				<ul class="infolink list">
 					<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
 					<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
