--- a/portfolio.html
+++ b/portfolio.html
@@ -1,103 +1,108 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
     <style>
-		.accent{
-			color: #2196F3;
-		}
-	</style>
-</head>
-<body>
+      .accent {
+        color: #2196f3;
+      }
+      .letter {
+        color: #ffffff;
+      }
+    </style>
+  </head>
+  <body>
     <header class="page-header">
-		<nav>
+      <nav>
         <a href="./index.html" class="logo"><span class="accent">Web</span>Studio</a>
-		<ul class="site-nav list" >
-			<li><a href="./index.html">Студия</a></li>
-			<li><a href=""class="link current">Портфолио</a></li>
-			<li><a href="">Контакты</a></li>
-		</ul>
-        </nav>
-
-		<ul class="info list">
-			<li><a href="">info@devstudio.com</a></li>
-			<li><a href="">+38 096 111 11 11</a></li>
+        <ul class="site-nav list">
+          <li><a href="./index.html">Студия</a></li>
+          <li><a href="" class="link current">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
         </ul>
+      </nav>
+
+      <ul class="info list">
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
     <main>
-        <section class="section">
-            <ul class="list">
-                <li><button type="" class="button-type">Все</button></li>
-                <li><button type="" class="button-type">Веб-сайты</button></li>
-                <li><button type="" class="button-type">Приложения</button></li>
-                <li><button type="" class="button-type">Дизайн</button></li>
-                <li><button type="" class="button-type">Маркетинг</button></li>
-            </ul>
-             <!--Примеры работ-->
-            <ul class="examples list">  
-                <li>
-                    <img src="./img/img (0).jpg" alt="Ноутбук" width="370" height="294">
-                    <h2 class="title">Технокряк</h2>
-                    <p class="text">Веб-сайт</p>
-                </li>
-                <li>
-                    <img src="./img/img (9).jpg" alt="Баскетболисты" width="370" height="294">
-                    <h2 class="title">Постер New Orlean vs Golden Star</h2>
-                    <p class="text">Дизайн</p>
-                </li>
-                <li>
-                    <img src="./img/img (11).jpg" alt="Морепродукты" width="370" height="294">
-                    <h2 class="title">Ресторан Seafood</h2>
-                    <p class="text">Приложение</p>
-                </li>
-                <li>
-                    <img src="./img/img (3).jpg" alt="Наушники" width="370" height="294">
-                    <h2 class="title">Проект Prime</h2>
-                    <p class="text">Маркетинг</p>
-                </li>
-                <li>
-                    <img src="./img/img (4).jpg" alt="Коробки" width="370" height="294">
-                    <h2 class="title">Проект Boxes</h2>
-                    <p class="text">Приложение</p>
-                </li>
-                <li>
-                    <img src="./img/img (5).jpg" alt="Монитор" width="370" height="294">
-                    <h2 class="title">Inspiration has no Borders</h2>
-                    <p class="text">Веб-сайт</p>
-                </li>
-                <li>
-                    <img src="./img/img (6).jpg" alt="Журнал" width="370" height="294">
-                    <h2 class="title">Издание Limited Edition</h2>
-                    <p class="text">Дизайн</p>
-                </li>
-                <li>
-                    <img src="./img/img (7).jpg" alt="Бирка" width="370" height="294">
-                    <h2 class="title">Проект LAB</h2>
-                    <p class="text">Маркетинг</p>
-                </li>
-                <li>
-                    <img src="./img/img (8).jpg" alt="Ноутбук" width="370" height="294">
-                    <h2 class="title">Growing Business</h2>
-                    <p class="text">Приложение</p>
-                </li>
-            </ul>
-        </section>
-
+      <section class="section">
+        <ul class="list">
+          <li><button type="" class="button-type">Все</button></li>
+          <li><button type="" class="button-type">Веб-сайты</button></li>
+          <li><button type="" class="button-type">Приложения</button></li>
+          <li><button type="" class="button-type">Дизайн</button></li>
+          <li><button type="" class="button-type">Маркетинг</button></li>
+        </ul>
+        <!--Примеры работ-->
+        <ul class="examples list">
+          <li>
+            <img src="./img/img0.jpg" alt="ноутбук" width="370" height="294" />
+            <h2 class="title">Технокряк</h2>
+            <p class="text">Веб-сайт</p>
+          </li>
+          <li>
+            <img src="./img/img9.jpg" alt="баскетболисты" width="370" height="294" />
+            <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+            <p class="text">Дизайн</p>
+          </li>
+          <li>
+            <img src="./img/img11.jpg" alt="морепродукты" width="370" height="294" />
+            <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
+            <p class="text">Приложение</p>
+          </li>
+          <li>
+            <img src="./img/img3.jpg" alt="наушники" width="370" height="294" />
+            <h2 class="title">Проект <span lang="en">Prime</span></h2>
+            <p class="text">Маркетинг</p>
+          </li>
+          <li>
+            <img src="./img/img4.jpg" alt="коробки" width="370" height="294" />
+            <h2 class="title">Проект <span lang="en">Boxes</span></h2>
+            <p class="text">Приложение</p>
+          </li>
+          <li>
+            <img src="./img/img5.jpg" alt="монитор" width="370" height="294" />
+            <h2 lang="en" class="title">Inspiration has no Borders</h2>
+            <p class="text">Веб-сайт</p>
+          </li>
+          <li>
+            <img src="./img/img6.jpg" alt="Журнал" width="370" height="294" />
+            <h2 class="title">Издание <span lang="en">Limited Edition</span></h2>
+            <p class="text">Дизайн</p>
+          </li>
+          <li>
+            <img src="./img/img7.jpg" alt="бирка" width="370" height="294" />
+            <h2 class="title">Проект <span lang="en"> LAB</span></h2>
+            <p class="text">Маркетинг</p>
+          </li>
+          <li>
+            <img src="./img/img8.jpg" alt="ноутбук" width="370" height="294" />
+            <h2 lang="en" class="title">Growing Business</h2>
+            <p class="text">Приложение</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer>
-		<a href="./index.html" class="logo"><span class="accent">Web</span>Studio</a>
-			<address class="address">
-				<p>г. Киев, пр-т Леси Украинки, 26</p>
-				<ul class="infolink list">
-					<li><a href="">info@devstudio.com</a></li>
-					<li><a href="">+38 096 111 11 11</a></li>
-			    </ul>		
-			</address>
-	</footer>
-</body>
+      <a href="./index.html" class="logo"><span class="accent">Web</span><span class="letter">Studio</span></a>
+      <address class="address">
+        <p>г. Киев, пр-т Леси Украинки, 26</p>
+        <ul class="infolink list">
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
+    </footer>
+  </body>
 </html>
